--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,10 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "body-parser": "^2.2.2",
     "cors": "^2.8.5",
