--- a/render.yaml
+++ b/render.yaml
@@ -16,11 +16,8 @@ services:
     healthCheckPath: /api/health
 
   # Frontend Static Site
-  - type: web
+  - type: static
     name: bgmi-scoreboard-frontend
-    runtime: static
-    env: static
-    region: singapore
     plan: free
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: frontend/dist
